--- a/assets/css/1-base/_fonts.sass
+++ b/assets/css/1-base/_fonts.sass
@@ -1,3 +1,3 @@
 // https://fonts.google.com
 
-@import 'https://fonts.googleapis.com/css?family=Allura|Merriweather+Sans:400,700,800'
+@import 'https://fonts.googleapis.com/css2?family=Allura|Mitr+Sans:400,700,800'
